Visual banner / Fix header image alignment

--- a/src/css/molecules/visual-banner.css
+++ b/src/css/molecules/visual-banner.css
@@ -21,8 +21,8 @@
 }
 
 .m-visual-banner__image {
-  object-fit: cover;
-  object-position: top;
-  width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
 }
